# sidekick

./: CLAUDE.md  Cargo.toml  PHILOSOPHY.md  README.md  build.rs
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish.yml
hooks/: hooks.json
plugins/opencode/: README.md  sidekick.ts
plugins/pi/: README.md  sidekick.ts
plugins/vscode-sidekick/: .eslintrc.json  .vscodeignore  jest.config.js  package-lock.json  package.json  tsconfig.json
plugins/vscode-sidekick/src/: blake3-compat.test.ts  extension.ts  handlers.test.ts  handlers.ts  server.ts  utils.test.ts  utils.ts
plugins/vscode-sidekick/src/__mocks__/: vscode.ts
scripts/: install.sh
src/: action.rs  constants.rs  demo.rs  doctor.rs  fix.rs  handler.rs  hook.rs  init.rs  lib.rs  main.rs  utils.rs
src/action/: neovim.rs  vscode.rs
src/action/neovim/: buffer.rs  connection.rs  lua.rs
src/action/vscode/: connection.rs  rpc.rs
src/analytics/: aggregate.rs  event.rs  mod.rs  store.rs
src/analytics/render/: mod.rs  terminal.rs
tests/: hook_tests.rs  utils_tests.rs
