[package]
name = "sidekick"
version = "0.1.0"
edition = "2024"
authors = ["Nishant Joshi"]
description = "Seamless integration between Claude Code and Neovim. Protects your workflow by safely coordinating AI edits with your unsaved work."
readme = "README.md"
homepage = "https://github.com/NishantJoshi00/sidekick"
repository = "https://github.com/NishantJoshi00/sidekick"
license = "MIT"
keywords = ["neovim", "claude", "ai", "editor", "hook"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
neovim-lib = "0.6"
rmpv = "1.3"
clap = { version = "4.5", features = ["derive"] }
blake3 = "1.5"
glob = "0.3"
