[package]
name = "sidekick"
version = "0.2.0"
edition = "2024"
authors = ["Nishant Joshi"]
description = "Seamless integration between Claude Code and Neovim. Protects your workflow by safely coordinating AI edits with your unsaved work."
readme = "README.md"
homepage = "https://github.com/NishantJoshi00/sidekick"
repository = "https://github.com/NishantJoshi00/sidekick"
license = "MIT"
keywords = ["neovim", "claude", "ai", "editor", "hook"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
neovim-lib = "0.6"
clap = { version = "4.5", features = ["derive"] }
blake3 = "1.5"
glob = "0.3"

# Pin rmp to avoid breaking changes in 0.8.15 that break rmpv 0.4.7 (used by neovim-lib)
rmp = "=0.8.14"
